@@ -1943,6 +1943,7 @@ namespace http
 						}
 						else if (
 							(switchtype == STYPE_Blinds)
+							|| (switchtype == STYPE_BlindsWithStop)
 							|| (switchtype == STYPE_BlindsPercentage)
 							|| (switchtype == STYPE_BlindsPercentageWithStop)
 							|| (switchtype == STYPE_VenetianBlindsUS)
