@@ -240,6 +240,7 @@ namespace http
 
 							bool bIsBlinds = (
 								switchtype == STYPE_Blinds
+								|| switchtype == STYPE_BlindsWithStop
 								|| switchtype == STYPE_BlindsPercentage
 								|| switchtype == STYPE_BlindsPercentageWithStop
 								|| switchtype == STYPE_VenetianBlindsEU
