@@ -130,6 +130,7 @@ std::string CNotificationKodi::GetIconFile(const std::string &ExtraData)
 				szTypeImage = "Contact48";
 				break;
 			case STYPE_Blinds:
+			case STYPE_BlindsWithStop:
 			case STYPE_BlindsPercentage:
 			case STYPE_BlindsPercentageWithStop:
 			case STYPE_VenetianBlindsUS:
