@@ -2178,7 +2178,7 @@ define(['app', 'livesocket'], function (app) {
 									}
 									else if (
 										(item.SwitchType == "Blinds Percentage")
-										|| (item.SwitchType == "Blinds + Stop")
+										|| (item.SwitchType == "Blinds % + Stop")
 									) {
 										xhtm += '<tr>';
 										xhtm += '<td colspan="2" style="border:0px solid red; padding-top:10px; padding-bottom:10px;">';
@@ -2238,6 +2238,7 @@ define(['app', 'livesocket'], function (app) {
 										|| (item.SwitchType == "Blinds")
 										|| (item.SwitchType == "Blinds Percentage")
 										|| (item.SwitchType == "Blinds + Stop")
+										|| (item.SwitchType == "Blinds % + Stop")
 										|| (item.SwitchType.indexOf("Venetian Blinds") == 0)
 										|| (item.SwitchType.indexOf("Media Player") == 0)
 									) {
@@ -2257,6 +2258,7 @@ define(['app', 'livesocket'], function (app) {
 											|| (item.SubType.indexOf('DC106') == 0)
 											|| (item.SubType.indexOf('Confexx') == 0)
 											|| (item.SwitchType.indexOf("Venetian Blinds") == 0)
+											|| (item.SwitchType == "Blinds % + Stop")
 											|| (item.SwitchType == "Blinds + Stop")
 										) {
 											xhtm += '\t    <table id="itemtablesmalltrippleicon" id="itemtablesmalltripleicon" border="0" cellpadding="0" cellspacing="0">\n';
@@ -2543,7 +2545,7 @@ define(['app', 'livesocket'], function (app) {
 									else if (item.SwitchType == "Blinds Percentage") {
 										xhtm += '<td class="input"><div style="margin-left:94px; margin-top: 7px;" class="dimslider dimslidersmalldouble" id="light_' + item.idx + '_slider" data-idx="' + item.idx + '" data-type="blinds" data-maxlevel="' + item.MaxDimLevel + '" data-isprotected="' + item.Protected + '" data-svalue="' + item.LevelInt + '"></div></td>';
 									}
-									else if (item.SwitchType == "Blinds + Stop") {
+									else if (item.SwitchType == "Blinds % + Stop") {
 										xhtm += '<td class="input"><div style="margin-left:124px; margin-top: 7px;" class="dimslider dimslidersmalltripple" id="light_' + item.idx + '_slider" data-idx="' + item.idx + '" data-type="blinds" data-maxlevel="' + item.MaxDimLevel + '" data-isprotected="' + item.Protected + '" data-svalue="' + item.LevelInt + '"></div></td>';
 									}
 									else if (item.SwitchType == "Selector") {
