@@ -2,6 +2,8 @@ Version 2025.xxxx
 - Implemented: EnergyDashboard, add option for (Outside) Temperature Sensor
 - Implemented: MQTT-AD, added support for Climate action_template/state
 - Implemented: MQTT-AD, added support for IR Blaster (Tuya iH-F8260)
+- Implemented: MQTT-AD, support for disabling cover stop button
+- Implemented: New Blinds type "Blinds + Stop"
 - Fixed: MQTT-AD, fix issue where brightness and RGB command topic are different
 - Fixed: MQTT-AD, preserve select options when updating a device
 - Changed: mDNS, hostname now lowercase
